--- a/WebContent/html/services.html
+++ b/WebContent/html/services.html
@@ -37,8 +37,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../index.html">主 页<span class="sr-only">(current)</span></a></li>
+        <li><a href="about.html">关 于 我 们</a></li>
         <li class="dropdown active">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -47,9 +47,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <li><a href="services.html">Services3</a></li>
           </ul>
         </li>
-		<li><a href="wedding.html">Wedding</a></li>
-		<li><a href="typo.html">Typo</a></li>
-		<li><a href="contact.html">Contact</a></li>
+		<li><a href="wedding.html">婚 礼</a></li>
+		<li><a href="typo.html">其 他</a></li>
+		<li><a href="contact.html">联 系 我 们</a></li>
       </ul>
       
       </div><!-- /.navbar-collapse -->
